test/expressions/vass/cast-to-non-type-1.good
cast-to-non-type-1.chpl:2: error: illegal cast to non-type
cast-to-non-type-1.chpl:3: warning: c: int(64)
