test/expressions/vass/cast-to-non-type-1.chpl
var t: int;
const c = 1:t;
compilerWarning("c: ", c.type:string, 0);
